[package]
name = "actix_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
mongodb = "3"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures = "0.3"  # async operations